[package]
name = "bulletin-board"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
actix-web = "4.9.0"
serde = { version = "1.0.210", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
serde_json = "1.0.128"
tokio = { version = "1.40.0" }

[dev-dependencies]
actix-rt = "2"
