[package]
name = "bulletin-board"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
actix-web = { version = "4", features = ["rustls"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
env_logger = "0.11.5"
log = "0.4.22"
tokio = { version = "1.40.0" }
actix-service = "2.0.2"
futures-util = "0.3.31"
dotenv = "0.15.0"
actix_route_rate_limiter = "0.2.1"
rustls = "0.20"
rustls-pemfile = "1.0"

[dev-dependencies]
actix-rt = "2"
